app ready to deploy vps

--- a/config.env
+++ b/config.env
@@ -1,14 +1,14 @@
 PORT=4000
 # DBCONNECTION=mongodb://localhost:27017/mkplatinumdb
-# signup to mongodb atlus and make cluster and get username password put it to following line
+signup to mongodb atlus and make cluster and get username password put it to following line
 DBCONNECTION=mongodb://abdulrehman:fullstackdeveloper@cluster0-shard-00-00.tvorq.mongodb.net:27017,cluster0-shard-00-01.tvorq.mongodb.net:27017,cluster0-shard-00-02.tvorq.mongodb.net:27017/mkplatinumdb?ssl=true&replicaSet=atlas-t4wgbi-shard-0&authSource=admin&retryWrites=true&w=majority
 NODE_ENV=development
 JWT_SECRET=This-is-my-testing-json-web-token-secrits
 JWT_EXPIRE_IN=1d
 MJ_APIKEY_PUBLIC=ee3e3410915e8ad4b0344021b27bd403
 MJ_APIKEY_PRIVATE=4cea7055c258108ad25701e49801a340
-CUSTOMER_URL=http://localhost:4000
-STAFF_URL=http://localhost:4000
+CUSTOMER_URL=https://mkplatinum.net
+STAFF_URL=https://mkplatinum.net
 # CUSTOMER_URL=https://admin.saeed.live
 # STAFF_URL=https://client.saeed.live
 
